# dl-course-ai

./: .gitignore  pyproject.toml
homeworks/: README.md
homeworks/Checkpoint_3/: Mid_Transformer.ipynb
